--- a/pages/Kertas/assets/main/style.css
+++ b/pages/Kertas/assets/main/style.css
@@ -14,7 +14,7 @@ top:0;
 	z-index:100;
   display: flex;
   flex-wrap: wrap;       /* allow wrapping on small screens */
-  gap: 0.5rem;
+  gap: 0;
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
@@ -23,10 +23,10 @@ top:0;
 
 
 #bar button{
+	width:32px;height:32px;
   flex: 0 0 auto;
-/*  min-width:auto;*/
+	border:1px darkgray solid;
   padding: 0.3rem;
-  border-radius: 6px;
   background: lightgray;
   cursor: pointer;
   text-align: center;
@@ -38,18 +38,13 @@ top:0;
 
 /* Grouped color tools */
 .group {
-	background-color: rgba(255, 255, 255, 0.5);
-	padding:3px;
-	border-radius:5px;
   display: flex;
   flex-wrap: wrap;
-  gap: 0.25rem;
   justify-content: center;
 }
 
 .group button,
 .group label {
-	
   flex: 0 1 auto;
 /*  min-width: 40px;*/
 }
@@ -72,7 +67,7 @@ input[type=color] {
   padding:0;
   border:none;
 }
-#settings{margin-right:10px;text-align:center;width:auto;z-index:20;position:fixed;bottom:90px;left:10px;background-color:lightgray;color:black;padding:10px;border-radius:5px;font-size:12px;transition: 0.3s;}
+#settings{margin-right:10px;text-align:center;width:auto;z-index:20;position:fixed;bottom:75px;left:0px;background-color:lightgray;color:black;padding:10px;font-size:12px;transition: 0.3s;}
 #settings button{
 width:auto;
 margin-top:5px;
@@ -110,8 +105,8 @@ input[type=number] {
 /* Toggle button */
 .panel-bottom {
 	position: fixed;
-	bottom: 50px;
-	left: 10px;
+	bottom: 43px;
+	left: 0px;
 	z-index: 100000000;
 	color: black;
 	cursor: pointer;
@@ -260,9 +255,8 @@ width:100%;
     border: none;
     background-color: var(--btn-bg);
     color: var(--btn-text);
-    border-radius: 8px;
+    border-radius: 15px;
     padding: 10px 16px;
-/*    font: 600 16px/1.1 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;*/
     cursor: ew-resize; /* left/right drag */
     user-select: none;
     touch-action: none;
@@ -279,12 +273,10 @@ width:100%;
 
   .drag-btn.dragging {
     background: var(--btn-bg-active);
-/*    transform: scale(0.98);*/
   }
 
   .value-display {
     font-size: 16px;
-    font-weight: 600;
     pointer-events: none;
   }
 
@@ -319,22 +311,27 @@ width:100%;
 	}
 	.panel-bottom {
 		bottom: 0px;
-		left: 40px;
+		left: 38px;
+		width:100px;
 	}
 	#settings{
-		bottom:40px;
-		left:40px;
+    bottom:0px;
+    left: 135px;
+/*    transform: translate(-50%, -50%);*/
 	}
 	.sliders{
-	flex-direction:column;
-gap:0px;
-		bottom:40px;
-		left:40px;
+		flex-direction:column;
+		gap:0px;
+		bottom:100px;
+		left:50px;
 		gap:0px;
 	}
 	#bar{
+		width:100px;
 		gap:0px;
+		left:80px;
 	}
-	}
+  }
+}
 
 
