--- a/pages/Kertas/assets/main/style.css
+++ b/pages/Kertas/assets/main/style.css
@@ -14,7 +14,7 @@ top:0;
 	z-index:100;
   display: flex;
   flex-wrap: wrap;       /* allow wrapping on small screens */
-  gap: 0;
+  gap: 5px;
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
