--- a/pages/WebRef/style.css
+++ b/pages/WebRef/style.css
@@ -19,7 +19,6 @@ html, body {
   top: 0px;
   left: 0px;
   z-index: 1000;
-  background-color:rgba(0, 0, 0, 0.5);
   padding:5px;
 }
 /* Make the toolbar a flex container */
@@ -33,7 +32,9 @@ html, body {
 /* Style for buttons and labels inside toolbar */
 .toolbar button,
 .toolbar label {
+	margin :2px 2px 2px 2px;
   padding: 6px 12px;
+  height:32px;
   font-size: 14px;
   cursor: pointer;
   background: #444;
