--- a/pages/WebRef/style.css
+++ b/pages/WebRef/style.css
@@ -137,6 +137,7 @@ input[type="number"]{width:40px; appearance: textfield; }
   bottom: 10px;
   left: 10px;
   z-index: 1000;
+  user-select: none; 
 }
 
 .nav-toggle button {
@@ -164,6 +165,7 @@ input[type="number"]{width:40px; appearance: textfield; }
   flex-direction: column;
   gap: 12px;
   z-index: 1000;
+  user-select: none; 
 }
 
 .overlay-btn {
