--- a/pages/WebRef/assets/css/style.css
+++ b/pages/WebRef/assets/css/style.css
@@ -151,32 +151,32 @@ position:absolute;width:12px;height:12px;background:blue;z-index:1000;cursor:nws
 }
 
 /* Resize handle (hidden by default) */
+
 .resize-handle {
   display: none;
-  width: 32px;
-  height: 32px;
+  width: 64px;
+  height: 64px;
   background: #fff;
-  border: 1px solid #000;
+  border: 2px solid #000;
   position: absolute;
-  right: -6px;
-  bottom: -6px;
-  cursor: nwse-resize;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  cursor: nwse-resize; /* or grab, since it's centered */
 }
 
-/* Rotate handle (hidden by default) */
+/* Rotate handle (top center) */
 .rotate-handle {
   display: none;
-  width: 32px;
-  height: 32px;
+  width: 64px;
+  height: 64px;
   background: #0ff;
-  border: 1px solid #000;
+  border: 2px solid #000;
   position: absolute;
-  right: -6px;
+  left: 50%;
   top: -6px;
+  transform: translateX(-50%);
   cursor: grab;
-}
-.rotate-handle:active {
-  cursor: grabbing;
 }
 
 /* Show handles only when selected */
