--- a/pages/Kertas/assets/main/style.css
+++ b/pages/Kertas/assets/main/style.css
@@ -335,11 +335,11 @@ width:100%;
 		left:50px;
 		bottom:50px;
 	}
-	#bar{
-		width:100px;
-		gap:0px;
-		left:80px;
-	}
+/*	#bar{*/
+/*		width:100px;*/
+/*		gap:0px;*/
+/*		left:80px;*/
+/*	}*/
   }
 }
 
