--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,8 +63,10 @@ html {
 }
 
     .card:hover img { transform:scale(1.05); }
-    .overlay-title { position:absolute; bottom:8px; left:8px; right:8px; background:rgba(0,0,0,0.7); color:#fff; padding:6px 10px; font-size:14px; border-radius:4px; font-weight:bold;}
-    .overlay-genre { position:absolute; top:8px; left:8px; background:red; color:#fff; padding:4px 8px; font-weight:bold;font-size:12px; border-radius:4px; }
+    .overlay-title { position:absolute; bottom:0px; left:0px; right:0px; background:rgba(0,0,0,0.7); color:#fff; 
+    padding:5px 5px;
+    font-size:14px; border-radius:0px; font-weight:bold;}
+    .overlay-genre { position:absolute; top:0px; left:0px; background:red; color:#fff; padding:4px 8px; font-weight:bold;font-size:12px; border-radius:0px; }
     .tba{opacity:0.5;}
     
 
