--- a/pages/XDTS-Editor/style.css
+++ b/pages/XDTS-Editor/style.css
@@ -14,19 +14,16 @@ body { font-family: sans-serif; margin: 0px 10px 0px 10px; }
 }
 
 .panel {
+	margin:5px;
   flex: 1 1 220px;          /* smaller minimum width */
   padding: 0.5rem;          /* reduced padding */
-  border: none;
-  border-radius: 4px;
+  border: 1px solid lightgray;
   background: #fafafa;
 }
 
 /* Labels and inputs compact */
 .panel label {
-/*  display: flex;*/
-/*  flex-direction: inline;*/
-  margin-bottom: 0.25rem;
-  font-size: 0.85rem;       /* smaller text */
+  font-size: 0.85rem;
 }
 .panel input{
 max-width:24px;
@@ -34,31 +31,8 @@ appearance: textfield;
 text-align:center;
 }
 
+#durationLabel{color:blue;}
 
-/*.panel input,*/
-/*.panel button {*/
-
-/*  padding: 0.35rem 0.5rem;  /* tighter controls */*/
-/*  font-size: 0.85rem;*/
-/*  margin-top: 0.2rem;*/
-/*}*/
-
-/*.panel button {*/
-/*  margin-right: 0.25rem;*/
-/*}*/
-
-.panel button,
-.panel label {
-	margin :2px 2px 2px 2px;
-  padding: 6px 12px;
-  font-size: 14px;
-  cursor: pointer;
-  background: #28262a;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  transition: background 0.2s;
-}
 
 /* Hover effect */
 .toolbar button:hover,
@@ -111,18 +85,11 @@ input.cellInput {
   box-sizing: border-box;
 }
 .nullcell { color: black; font-weight: bold; }
-/*#dropZone {*/
-/*  border: 2px dashed #888;*/
-/*  */
-/*  border-radius: 8px;*/
-/*  padding: 20px;*/
-/*  text-align: center;*/
-/*  color: #555;*/
-/*/*  margin-top: 20px;*/*/
-/*  cursor: pointer;*/
-/*}*/
+#dropZone {
+  background-color:none;
+}
 #dropZone.dragover {
-  background: #f0f0f0;
+  background-color: #f9f06b;
 /*  border-color: #333;*/
 /*  color: #000;*/
 }
