--- a/pages/ZettaiAbsolute/assets/css/style.css
+++ b/pages/ZettaiAbsolute/assets/css/style.css
@@ -24,8 +24,8 @@ body {
 	top: 5px;
 	right: 5px;
 	border: 2px solid #e23a6b;
-	color: #e23a6b;
-	background-color: white;
+	color: white;
+	background-color: #e23a6b;
 	border-radius: 100%;
 	padding: 10px;
 	width: 64px;
