--- a/pages/ZettaiAbsolute/assets/css/style.css
+++ b/pages/ZettaiAbsolute/assets/css/style.css
@@ -276,8 +276,7 @@ font-family: "Tagesschrift", system-ui;
 	width: 300px;
 	margin-left: 5px;
 	margin-right: 5px;
-	border-radius: 8px;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+	border: none;
 }
 
 iframe {
@@ -285,7 +284,6 @@ iframe {
 	width: 100%;
 	height: 170px;
 	border: none;
-	border-radius: 8px 8px 0 0;
 }
 
 .controls {
