--- a/pages/ZettaiAbsolute/assets/css/style.css
+++ b/pages/ZettaiAbsolute/assets/css/style.css
@@ -121,6 +121,9 @@ height:40px;
 	padding: 5px;
 	border-radius: 10px;
 }
+.red-button:hover{
+background-color:#ff719b;
+}
 
 h2 {
 font-family: "Tagesschrift", system-ui;
