--- a/pages/Kertas/assets/main/css/canvas.css
+++ b/pages/Kertas/assets/main/css/canvas.css
@@ -1,7 +1,5 @@
 #canvasContainer {
   position: relative;
-  
-  
   background-color: lightgray;
   overflow-x: auto;
   overflow-y:auto; 
@@ -10,7 +8,6 @@
   justify-content: center; 
   width:100%;height:100%;
   z-index:0;
-  pointer-events: none; 
 }
 
 #canvas, 
@@ -23,8 +20,22 @@
   height: auto;
   max-width: none; 
   background-color: transparent !important;
-  pointer-events: none; 
   image-rendering: auto; 
+}
+
+
+#lassoSelectOverlay{
+position:absolute; top:0; left:0; z-index:9;
+}
+#lassoFillOverlay{
+position:absolute; top:0; left:0; z-index:9;
+}
+#rectOverlay{
+position:absolute; top:0; left:0; z-index:9;
+}
+
+#cameraOverlay {
+z-index:10;
 }
 
 .pixelated-rendering {
@@ -40,8 +51,7 @@
 
 #canvas { 
   z-index: 1;
-  cursor: crosshair; 
-  pointer-events: auto;
+  cursor: crosshair;
 /*
    min-width: 1280px;
   min-height: 720px;
@@ -60,5 +70,4 @@
   transform: translate(-50%, -50%);
   image-rendering: pixelated; 
 }
-
 
